# developer-activity-hub

./: .gitignore  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-dist/: index.html
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/day-detail/: route.ts
src/app/api/github-stats/: route.ts
src/app/api/repo-detail/: route.ts
src/app/api/repo-file/: route.ts
src/app/api/usage/: route.ts
src/app/api/weekly-digest/: route.ts
src/app/mini/: page.tsx
src/app/weekly/: page.tsx
src/components/: activity-heatmap.tsx  bento-card.tsx  blended-year-heatmap.tsx  combined-timeline.tsx  dashboard-grid.tsx  day-detail-modal.tsx  hero-stats.tsx  info-tooltip.tsx  model-breakdown.tsx  pr-issue-stats.tsx  productivity-score-card.tsx  recent-projects.tsx  repo-breakdown.tsx  repo-explorer-modal.tsx  sortable-card.tsx  stat-card.tsx  streak-achievements.tsx  unified-year-heatmap.tsx  usage-chart.tsx  year-heatmap.tsx
src/components/ui/: dialog.tsx
src/hooks/: use-dashboard-layout.ts  use-github-stats.ts  use-usage-data.ts
src/lib/: achievements.ts  ai-summary.ts  archive.ts  dashboard-cards.ts  github-bulk.ts  github-types.ts  github.ts  parse-stats.ts  productivity-score.ts  repo-detail-types.ts  types.ts  utils.ts  week-utils.ts  weekly-types.ts
src/styles/: hljs-dark.css
